--- a/bqBOX/res/values/strings.xml
+++ b/bqBOX/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_ebooks">EbooksActivity</string>
 
     <string name="lista_ebooks">Lista de bqbooks</string>
+    <string name="selecciona_criterio_ordenacion">Selecciona criterio ordenación</string>
 </resources>
